Added basic REST api for storing wines. Based on http://coenraets.org/blog/2012/10/creating-a-rest-api-using-node-js-express-and-mongodb/

--- a/package.json
+++ b/package.json
@@ -8,8 +8,20 @@
     "start": "node server.js"
   },
   "author": "Christoffer Jerkeby",
-  "license": "Apache License 2.0",
+  "license": "Apache-2.0",
   "dependencies": {
-    "express": "^4.13.3"
-  }
+    "express": "^4.13.3",
+    "mongodb": "^2.2",
+    "morgan": "^1.8",
+    "body-parser": "^1.16"
+    "bson": "^1.0.4"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kugg/microfun.git"
+  },
+  "bugs": {
+    "url": "https://github.com/kugg/microfun/issues"
+  },
+  "homepage": "https://github.com/kugg/microfun#readme"
 }
